slimfiles changed and layout.slim

--- a/lib/app/views/MissionVisionandValues.slim
+++ b/lib/app/views/MissionVisionandValues.slim
@@ -1,6 +1,6 @@
-#content-w2
-  #system-message-container
-  .item-page
+div class=content-w2
+  div class=system-message-container
+  div id=item-page
     h2
       | Mission, Vision and Values
     p style="text-align: justify; "
