--- a/lib/app/views/EarnABike.slim
+++ b/lib/app/views/EarnABike.slim
@@ -1,6 +1,6 @@
-#content-w2
-  #system-message-container
-  .item-page
+div class=content-w2
+  div class=system-message-container
+  div id=item-page
     h2
       | Earn A Bike
     p style="text-align: justify;"
