changed module requires to stitch app together

--- a/lib/app/views/BikeCamp.slim
+++ b/lib/app/views/BikeCamp.slim
@@ -1,6 +1,6 @@
-div class=content-w2
-  div class=system-message-container
-  div id=item-page
+div class="content-w2"
+  div class="system-message-container"
+  div id="item-page"
     h2
       | Bike Camp
     p style="text-align: justify; "
