--- a/lib/app/views/ContactHours.slim
+++ b/lib/app/views/ContactHours.slim
@@ -1,6 +1,6 @@
-div class=content-w2
-  div class=system-message-container
-  div id=item-page
+div class="content-w2"
+  div class="system-message-container"
+  div id="item-page"
     h2
       | Contact & Hours
     div style="text-align: right; "
