--- a/lib/app/views/layout.slim
+++ b/lib/app/views/layout.slim
@@ -1,16 +1,8 @@
-DOCTYPE html
+html
   head
     base href="http://www.thebikedepot.org/" 
     meta http-equiv="content-type" content="text/html; charset=utf-8" 
-    meta name="keywords" content="Where to donate a bike in Denver
-      Where to donate a bike in Denver
-      Bike Shop Denver
-      Bicycle Shop Denver
-      Fix bike denver
-      Fix bicycle denver
-      Bike parts denver
-      Bicycle parts denver
-      " 
+    meta name="keywords" content="Where to donate a bike in Denver\nWhere to donate a bike in Denver\nBike Shop Denver\nBicycle Shop Denver\nFix bike denver\nFix bicycle denver\nBike parts denver\nBicycle parts denver\n" 
     meta name="generator" content="Joomla! - Open Source Content Management" 
     title Home
     link rel="stylesheet" href="/plugins/system/jcemediabox/css/jcemediabox.css?version=114" type="text/css" 
@@ -28,17 +20,17 @@ DOCTYPE html
     script src="/modules/mod_djimageslider/assets/slider.js" type="text/javascript"
     script type="text/javascript" src="/templates/bikedepottemplatefallseason/js/sfhover.js"
     script type="text/javascript"
-      window.addEvent('load', function() {
-              new JCaption('img.caption');
-            });
-      JCEMediaObject.init('/', {flash:"10,0,22,87",windowmedia:"5,1,52,701",quicktime:"6,0,2,0",realmedia:"7,0,0,0",shockwave:"8,5,1,0"});JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resize:1,icons:1,overlay:1,overlayopacity:0.8,overlaycolor:"#000000",fadespeed:500,scalespeed:500,hideobjects:0,scrolling:"fixed",close:2,labels:{'close':'Close','next':'Next','previous':'Previous','cancel':'Cancel','numbers':'{$current} of {$total}'}},tooltip:{className:"tooltip",opacity:0.8,speed:150,position:"br",offsets:{x: 16, y: 16}},base:"/",imgpath:"plugins/system/jcemediabox/img",theme:"standard",themecustom:"",themepath:"plugins/system/jcemediabox/themes"});
+      / window.addEvent('load', function() {
+      /         new JCaption('img.caption');
+      /       });
+      / JCEMediaObject.init('/', {flash:"10,0,22,87",windowmedia:"5,1,52,701",quicktime:"6,0,2,0",realmedia:"7,0,0,0",shockwave:"8,5,1,0"});JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resize:1,icons:1,overlay:1,overlayopacity:0.8,overlaycolor:"#000000",fadespeed:500,scalespeed:500,hideobjects:0,scrolling:"fixed",close:2,labels:{'close':'Close','next':'Next','previous':'Previous','cancel':'Cancel','numbers':'{$current} of {$total}'}},tooltip:{className:"tooltip",opacity:0.8,speed:150,position:"br",offsets:{x: 16, y: 16}},base:"/",imgpath:"plugins/system/jcemediabox/img",theme:"standard",themecustom:"",themepath:"plugins/system/jcemediabox/themes"});
   body
     div id="wrapper"
       div id="header"
       <!-- Logo -->
         div id="logo"
-          a href="/" img src="/templates/bikedepottemplatefallseason/images/logo.gif"  alt="bikedepot" 
-      <!-- Search -->
+          a href="/" 
+          img src="/templates/bikedepottemplatefallseason/images/logo.gif"  alt="bikedepot" 
       div id="search"   
       div id="topmenu"
         ul class="menu"
@@ -59,7 +51,7 @@ DOCTYPE html
             a href="/index.php/about/privacy-policy" Privacy Policy
           li class="item-106 deeper parent"
             a href="/index.php/programs" Programs
-         ul
+        ul
           li class="item-133"
             a href="/index.php/programs/earn-a-bike" Earn A Bike
           li class="item-134"
@@ -108,48 +100,48 @@ DOCTYPE html
             a href="/index.php/links/friends" Friends
           li class="item-146"
             a href="/index.php/links/we-love" We Love...
-    br clear="all" 
-    <!-- Right Menu -->
-    div id="rightmenu"
+      br clear="all" 
+      <!-- Right Menu -->
+      div id="rightmenu"
         div class="moduletable"
 
-  div class="custom"
-    h2 style="text-align: center;"
-      a href="https://maps.google.com/maps?ie=UTF8&amp;cid=10676092889539153742&amp;q=The+Bike+Depot&amp;iwloc=A&amp;gl=US&amp;hl=en-US" target="_blank"
-      span style="font-size: 18px; line-height: 1.3em; color: #1F75A7; font-family: Oswald, sans-serif; background-color: rgb(255, 255, 250);"2825 Fairfax Street
-      span style="color:#ffffff;"
-      span style="font-size: 18px; line-height: 1.3em; font-family: Oswald, sans-serif; background-color: rgb(255, 255, 250); "__
-    h2 style="text-align: center;"    
-      a href="https://maps.google.com/maps?ie=UTF8&amp;cid=10676092889539153742&amp;q=The+Bike+Depot&amp;iwloc=A&amp;gl=US&amp;hl=en-US" target="_blank"
-      span style="font-size: 18px; line-height: 1.3em; color: #1F75A7; font-family: Oswald, sans-serif; background-color: rgb(255, 255, 250);"Denver, CO 80207
-      span style="color:#ffffff;"
-      span style="font-size: 18px; line-height: 1.3em; font-family: Oswald, sans-serif; background-color: rgb(255, 255, 250); "__
-    h2 style="text-align: center;"
-      span style="font-size: 18px; line-height: 1.3em; color: #1F75A7; font-family: Oswald, sans-serif; background-color: rgb(255, 255, 250);"(303) 393-1963
-      span style="color:#ffffff;"
-      span style="font-size: 18px; line-height: 1.3em; font-family: Oswald, sans-serif; background-color: rgb(255, 255, 250); "__
-        div class="moduletable"
-  div class="custom"
-    p style="text-align: center;"
-      a href="http://www.givingfirst.org/index.php?section=organizations&amp;action=newDonation&amp;fwID=27598" target="_blank" img alt="" src="http://thebikedepot.org/images/Donate Now button.jpg" style="height: 102px; width: 190px; " 
-        div class="moduletable"
-  div class="custom"
-    p style="text-align: center;"
-      a href="https://www.facebook.com/TheBikeDepot" target="_blank" img alt="" src="http://thebikedepot.org/images/facebook-logo.jpg" style="height: 57px; width: 190px; "       
-        div class="moduletable"
-  div class="custom"
-    p  
-      a href="http://www.thebikedepot.org/index.php?option=com_content&amp;view=category&amp;id=27" target="_self" img alt="" src="http://thebikedepot.org/images/121228-tbd-webcolor copy-1.jpg" style="height: 111px; width: 190px; " 
+        div class="custom"
+          h2 style="text-align: center;"
+            a href="https://maps.google.com/maps?ie=UTF8&amp;cid=10676092889539153742&amp;q=The+Bike+Depot&amp;iwloc=A&amp;gl=US&amp;hl=en-US" target="_blank"
+            span style="font-size: 18px; line-height: 1.3em; color: #1F75A7; font-family: Oswald, sans-serif; background-color: rgb(255, 255, 250);"2825 Fairfax Street
+            span style="color:#ffffff;"
+            span style="font-size: 18px; line-height: 1.3em; font-family: Oswald, sans-serif; background-color: rgb(255, 255, 250); "__
+          h2 style="text-align: center;"    
+            a href="https://maps.google.com/maps?ie=UTF8&amp;cid=10676092889539153742&amp;q=The+Bike+Depot&amp;iwloc=A&amp;gl=US&amp;hl=en-US" target="_blank"
+            span style="font-size: 18px; line-height: 1.3em; color: #1F75A7; font-family: Oswald, sans-serif; background-color: rgb(255, 255, 250);"Denver, CO 80207
+            span style="color:#ffffff;"
+            span style="font-size: 18px; line-height: 1.3em; font-family: Oswald, sans-serif; background-color: rgb(255, 255, 250); "__
+          h2 style="text-align: center;"
+            span style="font-size: 18px; line-height: 1.3em; color: #1F75A7; font-family: Oswald, sans-serif; background-color: rgb(255, 255, 250);"(303) 393-1963
+            span style="color:#ffffff;"
+            span style="font-size: 18px; line-height: 1.3em; font-family: Oswald, sans-serif; background-color: rgb(255, 255, 250); "__
+            div class="moduletable"
+        div class="custom"
+          p style="text-align: center;"
+            a href="http://www.givingfirst.org/index.php?section=organizations&amp;action=newDonation&amp;fwID=27598" target="_blank" img alt="" src="http://thebikedepot.org/images/Donate Now button.jpg" style="height: 102px; width: 190px; " 
+            div class="moduletable"
+        div class="custom"
+          p style="text-align: center;"
+            a href="https://www.facebook.com/TheBikeDepot" target="_blank" img alt="" src="http://thebikedepot.org/images/facebook-logo.jpg" style="height: 57px; width: 190px; "       
+            div class="moduletable"
+        div class="custom"
+          p  
+            a href="http://www.thebikedepot.org/index.php?option=com_content&amp;view=category&amp;id=27" target="_self" img alt="" src="http://thebikedepot.org/images/121228-tbd-webcolor copy-1.jpg" style="height: 111px; width: 190px; " 
 
-    <!-- Contents -->
+      <!-- Contents -->
 
-    ==yield
+      ==yield
 
-    <!-- Three Picture Places -->
-    div id="Three Picture Places" 
-      div class="position 15"
-      div class="position 16"
-      div class="position 17"
+      <!-- Three Picture Places -->
+      div id="Three Picture Places" 
+        div class="position 15"
+        div class="position 16"
+        div class="position 17"
     <!-- Footer -->
     div id="footer"
     div id="push"
