adding routes and slim files for basic links

--- a/lib/app/views/ContactHours.slim
+++ b/lib/app/views/ContactHours.slim
@@ -42,7 +42,7 @@ div class="content-w2"
           span style="font-size:14px;"
         div
           span style="font-size:14px;"
-            em *We are closed Sundays November-March.
+            em We are closed Sundays November-March.
         div
           |  
         div
