--- a/lib/app/views/Home.slim
+++ b/lib/app/views/Home.slim
@@ -102,7 +102,7 @@ css:
         #slider-container130.slider-container
           ul#slider130
             li
-              a href="/index.php/about/contact" target="_self"
+              a href="/about/contact" target="_self"
                 img alt="Bike Depot Staff" src="/images/depot%20staff.jpg"
               /! Slide description area: START
               .slide-desc
@@ -115,7 +115,7 @@ css:
                     div style="clear: both"
               /! Slide description area: END
             li
-              a href="/index.php/programs" target="_self"
+              a href="/programs" target="_self"
                 img alt="Bike Depot Community Programs" src="/images/Photos/fyb%20father%20and%20son%20smiling.jpg"
               /! Slide description area: START
               .slide-desc
@@ -128,7 +128,7 @@ css:
                     div style="clear: both"
               /! Slide description area: END
             li
-              a href="/index.php/support/organizing-a-bike-collection-drive" target="_self"
+              a href="/support/organizing-a-bike-collection-drive" target="_self"
                 img alt="Organize a Bike Collection Drive" src="/images/mp900427870.jpg"
               /! Slide description area: START
               .slide-desc
@@ -153,16 +153,16 @@ css:
     div style="text-align: justify;"
       span style="font-size:14px;"
         | The Bike Depot is a 501(c)(3) nonprofit community bike shop that supports Denver communities with a wide range of bicycling programs, services and products. We have a full service Bike Shop offering new and used bikes and accessories, an affordable 
-        a href="/index.php/bike-shop/service"
+        a href="/bike-shop/service"
         |  menu and a 
-        a href="/index.php/programs/fix-your-bike"
+        a href="/programs/fix-your-bike"
         |  program where you can come to our shop and utilize our space and tools with the help of our Volunteer Mechanics.  
     div style="text-align: justify;"
       |  
     div style="text-align: justify;"
       span style="font-size:14px;"
         | Donated Bicycles are recycled to low income local residents through our 
-        a href="/index.php/programs/earn-a-bike"
+        a href="/programs/earn-a-bike"
         |  programs or refurbished and sold in our bicycle shop to support all of our community service programs.
     div
       span style="font-size: 16px; "
@@ -176,13 +176,13 @@ css:
         |                           
         span style="font-size: 18px;"
     div style="text-align: center; "
-      a href="http://www.thebikedepot.org/index.php/programs"
+      a href="http://www.thebikedepot.org/programs"
         img alt="" src="http://thebikedepot.org/images/Square/bike_depot_rodesquare.jpg" style="height: 210px; width: 210px; "
       |        
-      a href="http://www.thebikedepot.org/index.php/bike-shop"
+      a href="http://www.thebikedepot.org/bike-shop"
         img alt="" src="http://thebikedepot.org/images/Square/bike%20shopsquare.jpg" style="height: 210px; width: 210px; "
       |        
-      a href="http://www.thebikedepot.org/index.php/support"
+      a href="http://www.thebikedepot.org/support"
         img alt="" src="http://thebikedepot.org/images/Photos/support%20square.jpg" style="height: 210px; width: 210px; "
     div
       |  
@@ -191,4 +191,4 @@ css:
     div style="text-align: center; "
       strong
         span style="font-size:22px;"
-          a href="http://www.thebikedepot.org/index.php/support/memberships"
+          a href="http://www.thebikedepot.org/support/memberships"
