--- a/lib/app/views/layout.slim
+++ b/lib/app/views/layout.slim
@@ -1,25 +1,24 @@
 html
   head
-    base href="http://www.thebikedepot.org/" 
     meta http-equiv="content-type" content="text/html; charset=utf-8" 
     meta name="keywords" content="Where to donate a bike in Denver\nWhere to donate a bike in Denver\nBike Shop Denver\nBicycle Shop Denver\nFix bike denver\nFix bicycle denver\nBike parts denver\nBicycle parts denver\n" 
     meta name="generator" content="Joomla! - Open Source Content Management" 
     title Home
-    link rel="stylesheet" href="/plugins/system/jcemediabox/css/jcemediabox.css?version=114" type="text/css" 
-    link rel="stylesheet" href="/plugins/system/jcemediabox/themes/standard/css/style.css?version=114" type="text/css" 
-    link rel="stylesheet" href="/templates/system/css/system.css" type="text/css" 
-    link rel="stylesheet" href="/templates/system/css/general.css" type="text/css" 
-    link rel="stylesheet" href="/templates/bikedepottemplatefallseason/css/template.css" type="text/css"
+    link rel="stylesheet" href="http://www.thebikedepot.org/plugins/system/jcemediabox/css/jcemediabox.css?version=114" type="text/css" 
+    link rel="stylesheet" href="http://www.thebikedepot.org/plugins/system/jcemediabox/themes/standard/css/style.css?version=114" type="text/css" 
+    link rel="stylesheet" href="http://www.thebikedepot.org/templates/system/css/system.css" type="text/css" 
+    link rel="stylesheet" href="http://www.thebikedepot.org/templates/system/css/general.css" type="text/css" 
+    link rel="stylesheet" href="http://www.thebikedepot.org/templates/bikedepottemplatefallseason/css/template.css" type="text/css"
     link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css' 
-    script src="/media/system/js/mootools-core.js" type="text/javascript"
-    script src="/media/system/js/core.js" type="text/javascript"
-    script src="/media/system/js/caption.js" type="text/javascript"
-    script src="/plugins/system/jcemediabox/js/jcemediabox.js?version=114" type="text/javascript"
-    script src="/media/system/js/mootools-more.js" type="text/javascript"
-    script src="/modules/mod_djimageslider/assets/powertools-1.2.0.js" type="text/javascript"
-    script src="/modules/mod_djimageslider/assets/slider.js" type="text/javascript"
-    script type="text/javascript" src="/templates/bikedepottemplatefallseason/js/sfhover.js"
-    script type="text/javascript"
+    script src="http://www.thebikedepot.org/media/system/js/mootools-core.js" type="text/javascript"
+    script src="http://www.thebikedepot.org/media/system/js/core.js" type="text/javascript"
+    script src="http://www.thebikedepot.org/media/system/js/caption.js" type="text/javascript"
+    script src="http://www.thebikedepot.org/plugins/system/jcemediabox/js/jcemediabox.js?version=114" type="text/javascript"
+    script src="http://www.thebikedepot.org/media/system/js/mootools-more.js" type="text/javascript"
+    script src="http://www.thebikedepot.org/modules/mod_djimageslider/assets/powertools-1.2.0.js" type="text/javascript"
+    script src="http://www.thebikedepot.org/modules/mod_djimageslider/assets/slider.js" type="text/javascript"
+    script type="http://www.thebikedepot.org/text/javascript" src="/templates/bikedepottemplatefallseason/js/sfhover.js"
+    script type="http://www.thebikedepot.org/text/javascript"
       / window.addEvent('load', function() {
       /         new JCaption('img.caption');
       /       });
@@ -30,76 +29,76 @@ html
       <!-- Logo -->
         div id="logo"
           a href="/" 
-          img src="/templates/bikedepottemplatefallseason/images/logo.gif"  alt="bikedepot" 
+            img src="/images/logo.gif"  alt="bikedepot" 
       div id="search"   
       div id="topmenu"
         ul class="menu"
           li class="item-101 current active"
             a href="/" Home
           li class="item-103 deeper parent"
-            a href="/index.php/about" About
+            a href="/about" About
         ul
           li class="item-147"
-            a href="/index.php/about/mission-vision-and-values" Mission, Vision and Values
+            a href="/about/mission-vision-and-values" Mission, Vision and Values
           li class="item-114"
-            a href="/index.php/about/history" History
+            a href="/about/history" History
           li class="item-115"
-            a href="/index.php/about/staff-board" Staff &amp; Board
+            a href="/about/staff-board" Staff &amp; Board
           li class="item-120"
-            a href="/index.php/about/contact" Contact &amp; Hours
+            a href="/about/contact" Contact &amp; Hours
           li class="item-150"
-            a href="/index.php/about/privacy-policy" Privacy Policy
+            a href="/about/privacy-policy" Privacy Policy
           li class="item-106 deeper parent"
-            a href="/index.php/programs" Programs
+            a href="/programs" Programs
         ul
           li class="item-133"
-            a href="/index.php/programs/earn-a-bike" Earn A Bike
+            a href="/programs/earn-a-bike" Earn A Bike
           li class="item-134"
-            a href="/index.php/programs/fix-your-bike" Fix Your Bike
+            a href="/programs/fix-your-bike" Fix Your Bike
           li class="item-135"
-            a href="/index.php/programs/classes" Classes
+            a href="/programs/classes" Classes
           li class="item-136"
-            a href="/index.php/programs/bike-camp" Bike Camp
+            a href="/programs/bike-camp" Bike Camp
           li class="item-152"
-            a href="/index.php/programs/bike-rodeo" Bike Rodeo
+            a href="/programs/bike-rodeo" Bike Rodeo
           li class="item-110 deeper parent"
-            a href="/index.php/bike-shop" Bike Shop
+            a href="/bike-shop" Bike Shop
           ul
             li class="item-137"
-              a href="/index.php/bike-shop/retail" Retail
+              a href="/bike-shop/retail" Retail
             li class="item-138"
-              a href="/index.php/bike-shop/service" Service Menu
+              a href="/bike-shop/service" Service Menu
             li class="item-187"
-              a href="/index.php/bike-shop/xtracycle" Xtracycle
+              a href="/bike-shop/xtracycle" Xtracycle
             li class="item-112 deeper parent"
-              a href="/index.php/support" Support
+              a href="/support" Support
         ul
           li class="item-139"
-            a href="/index.php/support/volunteer" Volunteer
+            a href="/support/volunteer" Volunteer
           li class="item-140"
-            a href="/index.php/support/donate-bikes" Donate Bikes
+            a href="/support/donate-bikes" Donate Bikes
           li class="item-148"
-            a href="/index.php/support/organizing-a-bike-collection-drive" Organizing a Bike Collection Drive
+            a href="/support/organizing-a-bike-collection-drive" Organizing a Bike Collection Drive
           li class="item-141"
-            a href="/index.php/support/memberships" Memberships
+            a href="/support/memberships" Memberships
           li class="item-121"
-            a href="/index.php/support/wish-list" Wish List
+            a href="/support/wish-list" Wish List
           li class="item-111 deeper parent"
-            a href="/index.php/events" Events
+            a href="/events" Events
         ul
           li class="item-142"
-            a href="/index.php/events/calendar" Calendar>
+            a href="/events/calendar" Calendar>
           li class="item-143"
-            a href="/index.php/events/park-hill-family-bike-ride" Park Hill Family Bike Ride
+            a href="/events/park-hill-family-bike-ride" Park Hill Family Bike Ride
           li class="item-113 deeper parent"
-            a href="/index.php/links" Links
+            a href="/links" Links
         ul
           li class="item-144"
-            a href="/index.php/links/business-partners" Business Partners
+            a href="/links/business-partners" Business Partners
           li class="item-145"
-            a href="/index.php/links/friends" Friends
+            a href="/links/friends" Friends
           li class="item-146"
-            a href="/index.php/links/we-love" We Love...
+            a href="/links/we-love" We Love...
       br clear="all" 
       <!-- Right Menu -->
       div id="rightmenu"
@@ -123,15 +122,18 @@ html
             div class="moduletable"
         div class="custom"
           p style="text-align: center;"
-            a href="http://www.givingfirst.org/index.php?section=organizations&amp;action=newDonation&amp;fwID=27598" target="_blank" img alt="" src="http://thebikedepot.org/images/Donate Now button.jpg" style="height: 102px; width: 190px; " 
+            a href="http://www.givingfirst.org/index.php?section=organizations&amp;action=newDonation&amp;fwID=27598" target="_blank" 
+              img alt="" src="/images/Donate Now button.jpg" style="height: 102px; width: 190px; " 
             div class="moduletable"
         div class="custom"
           p style="text-align: center;"
-            a href="https://www.facebook.com/TheBikeDepot" target="_blank" img alt="" src="http://thebikedepot.org/images/facebook-logo.jpg" style="height: 57px; width: 190px; "       
+            a href="https://www.facebook.com/TheBikeDepot" target="_blank" 
+              img alt="" src="/images/facebook-logo.jpg" style="height: 57px; width: 190px; "       
             div class="moduletable"
         div class="custom"
           p  
-            a href="http://www.thebikedepot.org/index.php?option=com_content&amp;view=category&amp;id=27" target="_self" img alt="" src="http://thebikedepot.org/images/121228-tbd-webcolor copy-1.jpg" style="height: 111px; width: 190px; " 
+            a href="http://www.thebikedepot.org/index.php?option=com_content&amp;view=category&amp;id=27" target="_self" 
+              img alt="" src="/images/121228-tbd-webcolor copy-1.jpg" style="height: 111px; width: 190px; " 
 
       <!-- Contents -->
 
