fixing the view with css, js, etc

--- a/lib/app/views/DonateBikes.slim
+++ b/lib/app/views/DonateBikes.slim
@@ -16,9 +16,9 @@ div class="content-w2"
         a href="http://maps.google.com/maps?q=2825+Fairfax+St.++Denver,+CO+80207&hl=en&sll=38.997934,-105.550567&sspn=4.993723,9.876709&hnear=2825+Fairfax+St,+Denver,+Colorado+80207&t=m&z=16" target="_blank"
           u 2825 Fairfax St.
         | during our
-        = succeed "." do
+        | succeed "." do
           a href="http://www.thebikedepot.org/index.php/about/contact" target="_blank"
-      = succeed "\u{a0}" do
+      | succeed "\u{a0}" do
         span style="font-size:14px;"
       span style="font-size:14px;"
     p
@@ -60,7 +60,7 @@ div class="content-w2"
     p style="text-align: justify;"
       span style="font-size:14px;"
         | To make a cash donation to the Bike Depot to help us further support our community programs, please
-        = succeed "." do
+        | succeed "." do
           a href="https://www.givingfirst.org/index.php?section=organizations&action=newDonation&fwID=27598" target="_blank"
             u click here
     #skype_pnh_menu_container.skype_pnh_menu_container onmouseout="SkypeClick2Call.MenuInjectionHandler.hideMenu(event)" onmouseover="SkypeClick2Call.MenuInjectionHandler.showMenu(this, event)" style="display:none;"
