--- a/lib/app/views/FixYourBike.slim
+++ b/lib/app/views/FixYourBike.slim
@@ -19,7 +19,7 @@ div class="content-w2"
         strong
           em but will not do the work for you!
         |  If you would like us to service your bike, our staff mechanics would gladly do so for our
-        = succeed "." do
+        | succeed "." do
           a href="http://www.thebikedepot.org/betasite/index.php/bike-shop/service" target="_blank"
     p style="text-align: justify;"
       |  
