--- a/lib/app/views/layout.slim
+++ b/lib/app/views/layout.slim
@@ -4,101 +4,100 @@ html
     meta name="keywords" content="Where to donate a bike in Denver\nWhere to donate a bike in Denver\nBike Shop Denver\nBicycle Shop Denver\nFix bike denver\nFix bicycle denver\nBike parts denver\nBicycle parts denver\n" 
     meta name="generator" content="Joomla! - Open Source Content Management" 
     title Home
-    link rel="stylesheet" href="http://www.thebikedepot.org/plugins/system/jcemediabox/css/jcemediabox.css?version=114" type="text/css" 
-    link rel="stylesheet" href="http://www.thebikedepot.org/plugins/system/jcemediabox/themes/standard/css/style.css?version=114" type="text/css" 
-    link rel="stylesheet" href="http://www.thebikedepot.org/templates/system/css/system.css" type="text/css" 
-    link rel="stylesheet" href="http://www.thebikedepot.org/templates/system/css/general.css" type="text/css" 
-    link rel="stylesheet" href="http://www.thebikedepot.org/templates/bikedepottemplatefallseason/css/template.css" type="text/css"
+    link rel="stylesheet" href="/plugins/system/jcemediabox/css/jcemediabox.css?version=114" type="text/css" 
+    link rel="stylesheet" href="/plugins/system/jcemediabox/themes/standard/css/style.css?version=114" type="text/css" 
+    link rel="stylesheet" href="//templates/system/css/system.css" type="text/css" 
+    link rel="stylesheet" href="/templates/system/css/general.css" type="text/css" 
+    link rel="stylesheet" href="/templates/bikedepottemplatefallseason/css/template.css" type="text/css"
     link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css' 
-    script src="http://www.thebikedepot.org/media/system/js/mootools-core.js" type="text/javascript"
-    script src="http://www.thebikedepot.org/media/system/js/core.js" type="text/javascript"
-    script src="http://www.thebikedepot.org/media/system/js/caption.js" type="text/javascript"
-    script src="http://www.thebikedepot.org/plugins/system/jcemediabox/js/jcemediabox.js?version=114" type="text/javascript"
-    script src="http://www.thebikedepot.org/media/system/js/mootools-more.js" type="text/javascript"
-    script src="http://www.thebikedepot.org/modules/mod_djimageslider/assets/powertools-1.2.0.js" type="text/javascript"
-    script src="http://www.thebikedepot.org/modules/mod_djimageslider/assets/slider.js" type="text/javascript"
-    script type="http://www.thebikedepot.org/text/javascript" src="/templates/bikedepottemplatefallseason/js/sfhover.js"
-    script type="http://www.thebikedepot.org/text/javascript"
-      / window.addEvent('load', function() {
-      /         new JCaption('img.caption');
-      /       });
-      / JCEMediaObject.init('/', {flash:"10,0,22,87",windowmedia:"5,1,52,701",quicktime:"6,0,2,0",realmedia:"7,0,0,0",shockwave:"8,5,1,0"});JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resize:1,icons:1,overlay:1,overlayopacity:0.8,overlaycolor:"#000000",fadespeed:500,scalespeed:500,hideobjects:0,scrolling:"fixed",close:2,labels:{'close':'Close','next':'Next','previous':'Previous','cancel':'Cancel','numbers':'{$current} of {$total}'}},tooltip:{className:"tooltip",opacity:0.8,speed:150,position:"br",offsets:{x: 16, y: 16}},base:"/",imgpath:"plugins/system/jcemediabox/img",theme:"standard",themecustom:"",themepath:"plugins/system/jcemediabox/themes"});
+    script src="media/system/js/mootools-core.js" type="text/javascript"
+    script src="media/system/js/core.js" type="text/javascript"
+    script src="media/system/js/caption.js" type="text/javascript"
+    script src="plugins/system/jcemediabox/js/jcemediabox.js?version=114" type="text/javascript"
+    script src="media/system/js/mootools-more.js" type="text/javascript"
+    script src="modules/mod_djimageslider/assets/powertools-1.2.0.js" type="text/javascript"
+    script src="modules/mod_djimageslider/assets/slider.js" type="text/javascript"
+    script type="text/javascript" src="/templates/bikedepottemplatefallseason/js/sfhover.js"
+    javascript:
+      window.addEvent('load', function() {
+              new JCaption('img.caption');
+            });
+      JCEMediaObject.init('/', {flash:"10,0,22,87",windowmedia:"5,1,52,701",quicktime:"6,0,2,0",realmedia:"7,0,0,0",shockwave:"8,5,1,0"});JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resize:1,icons:1,overlay:1,overlayopacity:0.8,overlaycolor:"#000000",fadespeed:500,scalespeed:500,hideobjects:0,scrolling:"fixed",close:2,labels:{'close':'Close','next':'Next','previous':'Previous','cancel':'Cancel','numbers':'{$current} of {$total}'}},tooltip:{className:"tooltip",opacity:0.8,speed:150,position:"br",offsets:{x: 16, y: 16}},base:"/",imgpath:"plugins/system/jcemediabox/img",theme:"standard",themecustom:"",themepath:"plugins/system/jcemediabox/themes"});
   body
     div id="wrapper"
       div id="header"
-      <!-- Logo -->
         div id="logo"
           a href="/" 
-            img src="/images/logo.gif"  alt="bikedepot" 
-      div id="search"   
+            img src="/templates/bikedepottemplatefallseason/images/logo.gif"  alt="bikedepot" 
+        div id="search"   
       div id="topmenu"
         ul class="menu"
           li class="item-101 current active"
             a href="/" Home
           li class="item-103 deeper parent"
             a href="/about" About
-        ul
-          li class="item-147"
-            a href="/about/mission-vision-and-values" Mission, Vision and Values
-          li class="item-114"
-            a href="/about/history" History
-          li class="item-115"
-            a href="/about/staff-board" Staff &amp; Board
-          li class="item-120"
-            a href="/about/contact" Contact &amp; Hours
-          li class="item-150"
-            a href="/about/privacy-policy" Privacy Policy
+            ul
+              li class="item-147"
+                a href="/about/mission-vision-and-values" Mission, Vision and Values
+              li class="item-114"
+                a href="/about/history" History
+              li class="item-115"
+                a href="/about/staff-board" Staff &amp; Board
+              li class="item-120"
+                a href="/about/contact" Contact &amp; Hours
+              li class="item-150"
+                a href="/about/privacy-policy" Privacy Policy
           li class="item-106 deeper parent"
             a href="/programs" Programs
-        ul
-          li class="item-133"
-            a href="/programs/earn-a-bike" Earn A Bike
-          li class="item-134"
-            a href="/programs/fix-your-bike" Fix Your Bike
-          li class="item-135"
-            a href="/programs/classes" Classes
-          li class="item-136"
-            a href="/programs/bike-camp" Bike Camp
-          li class="item-152"
-            a href="/programs/bike-rodeo" Bike Rodeo
+            ul
+              li class="item-133"
+                a href="/programs/earn-a-bike" Earn A Bike
+              li class="item-134"
+                a href="/programs/fix-your-bike" Fix Your Bike
+              li class="item-135"
+                a href="/programs/classes" Classes
+              li class="item-136"
+                a href="/programs/bike-camp" Bike Camp
+              li class="item-152"
+                a href="/programs/bike-rodeo" Bike Rodeo
           li class="item-110 deeper parent"
             a href="/bike-shop" Bike Shop
-          ul
-            li class="item-137"
-              a href="/bike-shop/retail" Retail
-            li class="item-138"
-              a href="/bike-shop/service" Service Menu
-            li class="item-187"
-              a href="/bike-shop/xtracycle" Xtracycle
-            li class="item-112 deeper parent"
-              a href="/support" Support
-        ul
-          li class="item-139"
-            a href="/support/volunteer" Volunteer
-          li class="item-140"
-            a href="/support/donate-bikes" Donate Bikes
-          li class="item-148"
-            a href="/support/organizing-a-bike-collection-drive" Organizing a Bike Collection Drive
-          li class="item-141"
-            a href="/support/memberships" Memberships
-          li class="item-121"
-            a href="/support/wish-list" Wish List
+            ul
+              li class="item-137"
+                a href="/bike-shop/retail" Retail
+              li class="item-138"
+                a href="/bike-shop/service" Service Menu
+              li class="item-187"
+                a href="/bike-shop/xtracycle" Xtracycle
+          li class="item-112 deeper parent"
+            a href="/support" Support
+            ul
+              li class="item-139"
+                a href="/support/volunteer" Volunteer
+              li class="item-140"
+                a href="/support/donate-bikes" Donate Bikes
+              li class="item-148"
+                a href="/support/organizing-a-bike-collection-drive" Organizing a Bike Collection Drive
+              li class="item-141"
+                a href="/support/memberships" Memberships
+              li class="item-121"
+                a href="/support/wish-list" Wish List
           li class="item-111 deeper parent"
             a href="/events" Events
-        ul
-          li class="item-142"
-            a href="/events/calendar" Calendar>
-          li class="item-143"
-            a href="/events/park-hill-family-bike-ride" Park Hill Family Bike Ride
+            ul
+              li class="item-142"
+                a href="/events/calendar" Calendar
+              li class="item-143"
+                a href="/events/park-hill-family-bike-ride" Park Hill Family Bike Ride
           li class="item-113 deeper parent"
             a href="/links" Links
-        ul
-          li class="item-144"
-            a href="/links/business-partners" Business Partners
-          li class="item-145"
-            a href="/links/friends" Friends
-          li class="item-146"
-            a href="/links/we-love" We Love...
+            ul
+              li class="item-144"
+                a href="/links/business-partners" Business Partners
+              li class="item-145"
+                a href="/links/friends" Friends
+              li class="item-146"
+                a href="/links/we-love" We Love...
       br clear="all" 
       <!-- Right Menu -->
       div id="rightmenu"
@@ -109,16 +108,16 @@ html
             a href="https://maps.google.com/maps?ie=UTF8&amp;cid=10676092889539153742&amp;q=The+Bike+Depot&amp;iwloc=A&amp;gl=US&amp;hl=en-US" target="_blank"
             span style="font-size: 18px; line-height: 1.3em; color: #1F75A7; font-family: Oswald, sans-serif; background-color: rgb(255, 255, 250);"2825 Fairfax Street
             span style="color:#ffffff;"
-            span style="font-size: 18px; line-height: 1.3em; font-family: Oswald, sans-serif; background-color: rgb(255, 255, 250); "__
+            span style="font-size: 18px; line-height: 1.3em; font-family: Oswald, sans-serif; background-color: rgb(255, 255, 250); "
           h2 style="text-align: center;"    
             a href="https://maps.google.com/maps?ie=UTF8&amp;cid=10676092889539153742&amp;q=The+Bike+Depot&amp;iwloc=A&amp;gl=US&amp;hl=en-US" target="_blank"
             span style="font-size: 18px; line-height: 1.3em; color: #1F75A7; font-family: Oswald, sans-serif; background-color: rgb(255, 255, 250);"Denver, CO 80207
             span style="color:#ffffff;"
-            span style="font-size: 18px; line-height: 1.3em; font-family: Oswald, sans-serif; background-color: rgb(255, 255, 250); "__
+            span style="font-size: 18px; line-height: 1.3em; font-family: Oswald, sans-serif; background-color: rgb(255, 255, 250); "
           h2 style="text-align: center;"
             span style="font-size: 18px; line-height: 1.3em; color: #1F75A7; font-family: Oswald, sans-serif; background-color: rgb(255, 255, 250);"(303) 393-1963
             span style="color:#ffffff;"
-            span style="font-size: 18px; line-height: 1.3em; font-family: Oswald, sans-serif; background-color: rgb(255, 255, 250); "__
+            span style="font-size: 18px; line-height: 1.3em; font-family: Oswald, sans-serif; background-color: rgb(255, 255, 250); "
             div class="moduletable"
         div class="custom"
           p style="text-align: center;"
@@ -130,10 +129,10 @@ html
             a href="https://www.facebook.com/TheBikeDepot" target="_blank" 
               img alt="" src="/images/facebook-logo.jpg" style="height: 57px; width: 190px; "       
             div class="moduletable"
-        div class="custom"
-          p  
-            a href="http://www.thebikedepot.org/index.php?option=com_content&amp;view=category&amp;id=27" target="_self" 
-              img alt="" src="/images/121228-tbd-webcolor copy-1.jpg" style="height: 111px; width: 190px; " 
+        / div class="custom"
+        /   p  
+        /     a href="http://www.thebikedepot.org/index.php?option=com_content&amp;view=category&amp;id=27" target="_self" 
+        /       img alt="" src="/images/121228-tbd-webcolor copy-1.jpg" style="height: 111px; width: 190px; " 
 
       <!-- Contents -->
 
