url added to routes

--- a/lib/app/views/layout.erb
+++ b/lib/app/views/layout.erb
@@ -138,8 +138,9 @@ JCEMediaObject.init('/', {flash:"10,0,22,87",windowmedia:"5,1,52,701",quicktime:
 
   <!-- Footer -->
   <div id="footer">
-    
-    
+    <form action="/edit/#{url}" method = 'GET'>
+      <input type='submit' value="EDIT"/>
+      </form>   
   </div>
 
   <div id="push"></div>
