--- a/lib/app/views/layout.erb
+++ b/lib/app/views/layout.erb
@@ -119,7 +119,7 @@ JCEMediaObject.init('/', {flash:"10,0,22,87",windowmedia:"5,1,52,701",quicktime:
 
 
   <!-- Contents -->
-
+  <%= styled_flash %>
   <%= yield %>
 
   <!-- Three Picture Places -->
