--- a/lib/app/views/layout.erb
+++ b/lib/app/views/layout.erb
@@ -138,7 +138,8 @@ JCEMediaObject.init('/', {flash:"10,0,22,87",windowmedia:"5,1,52,701",quicktime:
 
   <!-- Footer -->
   <div id="footer">
-    <form action="/edit/#{url}" method = 'GET'>
+    <form action="/edit" method = 'GET'>
+      <input type='hidden' name="url" value="<%=url%>"/>
       <input type='submit' value="EDIT"/>
       </form>   
   </div>
