got db talking to controller for About, created show view template

--- a/lib/app/views/edit.erb
+++ b/lib/app/views/edit.erb
@@ -4,17 +4,28 @@
   </div>
     <div class="item-page">
 
-<form action='/<%=page.url %>' method='POST'>
+<form action='/edit' method='POST'>
 
-  <p>You are editing the page called: <strong><%=page.title %></strong> <br />
-    It is found at this address: <strong><%=page.url %></strong> </p>
-  <br />
+  <p>You are editing the page called: <strong><%=page.title %></strong><br />
+    It is found at this address: <strong><%=page.url %></strong> </p><br />
+
   <p> Make Changes To Title:</p>
-  <input type='text' name='page[title]'  value="<%= page.title %>"/><br/><br/>
+  <input type='text' name='title' value="<%= page.title %>"/><br/><br/>
+
   <p> Make Changes To Body Text: <p>
-  <textarea name='page[body]'style="width: 1200px; height: 1500px;"><%= page.body %></textarea><br/>
-  <br />
+  <textarea name='body'style="width: 1200px; height: 1500px;" 
+    value="<%= page.body %>"></textarea><br/><br />
+
+  <input type='hidden' name="url" value="<%=page.url%>"/>
+  <input type="hidden" name="_method" value="PUT">
   <input type='submit' value="Save"></input>
+
   </form>
     </div>
 </div>
+
+<!-- 
+<form action="/edit" method = 'GET'>
+  <input type='hidden' name="url" value="<%=url%>"/>
+  <input type='submit' value="EDIT"/>
+  </form>    -->
