--- a/lib/app/views/layout.erb
+++ b/lib/app/views/layout.erb
@@ -13,7 +13,7 @@ Bike parts denver
 Bicycle parts denver
 " />
   <meta name="generator" content="Joomla! - Open Source Content Management" />
-  <title>Home</title>
+  <title><% title ||= "Home" %><%= "#{title}" %></title>
   <link rel="stylesheet" href="/plugins/system/jcemediabox/css/jcemediabox.css?version=114" type="text/css" />
   <link rel="stylesheet" href="/plugins/system/jcemediabox/themes/standard/css/style.css?version=114" type="text/css" />
   
